--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,6 +6,7 @@
     <string name="btn_three">삼</string>
     <string name="btn_four">사</string>
     <string name="btn_ok">완료</string>
+    <string name="btn_yes">확인</string>
     <string name="btn_cancel">취소</string>
     <string name="et_content">내용</string>
     <string name="et_day">기한</string>
@@ -14,6 +15,18 @@
     <string name="tv_findId">아이디 찾기</string>
     <string name="tv_findPassword">비밀번호 찾기</string>
     <string name="tv_signUp">회원가입</string>
+    <string name="tv_userName">사용자</string>
+    <string name="tv_userId">user_id@todo.com</string>
+    <string name="tv_showDone">Done(완료한 일 보기)</string>
+    <string name="tv_showFriend">친구의 생일 보기</string>
+    <string name="tv_security">보안설정</string>
+    <string name="tv_sync">동기화 설정</string>
+    <string name="tv_logout">로그아웃</string>
+    <string name="tv_title_todo">To-Do (0)</string>
+    <string name="tv_title_done">Done (0)</string>
+    <string name="tv_title_none">None (0)</string>
+    <string name="tv_setSecurity">설정하실 비밀번호 4자리를 눌러주세요</string>
+    <string name="tv_remove">해당 항목을 삭제하시겠습니까?</string>
     <string name="title_activity_main">MainActivity</string>
     <string name="action_settings">Settings</string>
 </resources>
